# working-in-progress

./: .gitignore  apitest.py  docker-compose.yml  mkdocs.yml  requirements.txt
docs/: Dockerfile  mkdocs.yml  pyproject.toml
docs/01_PJ管理/: 一覧系ドキュメントサンプル.md
docs/03_システム要件定義/: 01_ユースケース一覧.md  API一覧.md  ユースケース一覧.xlsx  画面一覧.xlsx
docs/03_システム要件定義/01_ユースケース一覧/: ユースケース一覧.md
docs/03_システム要件定義/01_ユースケース図/: UCP01_年間データ登録.pu  UCP02_年間時間割編成.pu  UCP03_年間データ修正.pu  UCP04_年間時間割操作.pu
docs/03_システム要件定義/02_ユースケース図/: UCP01_年間データ登録.pu  UCP02_年間時間割編成.pu  UCP03_年間データ修正.pu  UCP04_年間時間割操作.pu
docs/03_システム要件定義/03_UI一覧/: UI一覧.md  共通UI一覧.md  画面一覧.md
docs/03_システム要件定義/03_画面一覧/: index.md
docs/03_システム要件定義/05_UIスケッチ/: VW-M001_曜日時限設定モーダル.md  VW002_教員情報登録画面.md  VW002_教員管理画面.md  VW003_科目登録画面.md
docs/03_システム要件定義/06_ユースケース記述/: UC0101_曜日時限を設定する.md  UC0102_教員を登録する.md  UC0103_教員の勤怠を登録する.md  UC0104_科目を登録する.md  UC0109_講座を追加する.md  UC0201_制約条件を課す（組み込み）.md  UC0202_制約条件を課す（チャット）.md  UC0203_編成を実行する.md  UC0204_編成結果を見る.md  UC0209_制約条件を緩和する.md  UC0210_制約条件を除外する.md  UC0212_制約条件の内容を変更する（組み込み）.md  UC0213_制約条件の内容を変更する（チャット）.md
docs/03_システム要件定義/08_API一覧/: API一覧.md
docs/03_システム要件定義/09_数理モデル/: 制約条件一覧.md
docs/03_システム要件定義/ユースケース図/: UCP01_年間データ登録.pu  UCP02_年間時間割編成.pu
docs/03_システム要件定義/ユースケース記述/: UC0101_曜日時限を設定する.md  UC0102_教員情報を登録する.md  UC0103_教員の勤怠を登録する.md  UC0104_科目を登録する.md  UC0105_学級を追加する.md  UC0106_ブロックを追加する.md  UC0106_学級を登録する.md  UC0108_講座を追加する.md  UC0201_制約条件を課す（組み込み）.md  UC0202_制約条件を課す（チャット）.md  UC0203_編成を実行する.md  UC0204_編成結果を見る.md  UC0210_制約条件を除外する.md  (+3 more)
docs/03_要件定義/: API一覧.md  ユースケース一覧.xlsx
docs/docs/: test.md
docs/lib/: doctest.html  filter.css  filter.js  package-lock.json  package.json  sample.md  test-table.html
python/: pyproject.toml
python/src/: main.py
(+184 files in other folders)
