[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.7"
mkdocstrings = "^0.29.0"
mkdocstrings-python = "^1.16.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
